--- a/index.css
+++ b/index.css
@@ -1,1 +1,67 @@
-write css here
+
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, #0a0a0a, #3a4452);
+}
+
+.calculator {
+    border: 1px solid #717377;
+    padding: 20px;
+    border-radius: 16px;
+    background: transparent;
+    box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
+}
+
+input {
+    width: calc(100% - 20px); /* Adjusted width to consider padding and margin */
+    border: none;
+    padding: 24px;
+    margin: 10px 0; /* Adjusted margin to top and bottom only */
+    background: transparent;
+    box-shadow: 0px 3px 50px rgba(84, 84, 84, 0.1);
+    font-size: 40px;
+    text-align: left; /* Changed from "right" to "left" */
+    cursor: pointer;
+    color: #ffffff;
+    outline: none; /* Added to remove default outline */
+}
+
+
+input::placeholder {
+    color: #ffffff;
+}
+
+button {
+    border: none;
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+    border-radius: 50%;
+    background: transparent;
+    color: #ffffff;
+    font-size: 20px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    outline: none; /* Added to remove default outline */
+}
+
+.equalbtn {
+    background: rgb(157, 240, 148);
+}
+
+.operator {
+    background: rgb(241, 74, 77);
+}
