--- a/TO-DO-LIST/style.css
+++ b/TO-DO-LIST/style.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #5CDB95;
+    background: rgb(137,207,240);
 }
 .box{
     position: relative;
@@ -20,7 +20,7 @@ body{
     height: 550px;
     padding: 30px 50px;
     border-radius: 30px;
-    background: #5CDB95;
+    background: rgb(137,207,240);
     box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
     10px 10px 70px rgba(0, 0, 0, 0.25),
     inset 5px 5px 10px rgba(0, 0, 0, 0.25),
@@ -32,6 +32,7 @@ h2{
     text-align: center;
     color: white;
     font-size: 1.75em;
+    margin-bottom: 10px;
 }
 #inputbx{
     position: relative;
@@ -44,4 +45,87 @@ h2{
     box-shadow:  5px 5px 7px rgba(0, 0, 0, 0.25),
     inset 2px 2px 5px rgba(0, 0, 0, 0.5);
 
+}
+.box li{
+    position: relative;
+    width: calc(100% - 40px);
+    display: flex;
+    align-items: center;
+    background-color: #296E85;
+    justify-content: space-between;
+    margin: 15px 0;
+    padding: 10px 10px 10px 45px;
+    min-height: 45px;
+    cursor: pointer;
+    border-radius: 22.5px;
+    color: white;
+    box-shadow:  5px 5px 7px rgba(0, 0, 0, 0.25),
+    inset 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+.box li i{
+   position: absolute;
+   right: -40px;
+   width: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 30px;
+   background: rgb(252, 76, 76);
+   border-radius: 50%;
+   box-shadow:  5px 5px 7px rgba(0, 0, 0, 0.25),
+   inset 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+.box li i::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 2px;
+    background: #fff;
+    transform: rotate(45deg);
+}
+.box li i::after{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 2px;
+    background: #fff;
+    transform: rotate(-45deg);
+}
+.box li::before{
+    content: '';
+    position: absolute;
+    left: 8px;
+    width: 30px;
+    height: 30px;
+    background: rgb(10, 66, 93);
+    border-radius: 50%;
+}
+.box li.done{
+    background-color: rgb(252, 76, 76);
+}
+.box li.done:after{
+    content: '';
+    position: absolute;
+    left: 16px;
+    width: 12px;
+    height: 6px;
+    border-left: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transform: rotate(315deg);
+}
+#list{
+    position: relative;
+    margin-top: 20px;
+    height: 350px;
+    overflow-y: auto;
+    padding-right:10px;
+}
+::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background: #ffff;
 }
